<resources>
    <string name="app_name">GPSTracker</string>
    <string name="home">Home</string>
    <string name="tracks">Tracks</string>
    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="update_time">Update time</string>
    <string name="update_time_summary">Location update time</string>
    <string name="track_color">Track color</string>
    <string name="track_color_summary">Choose track color</string>
    <string name="location_disabled_title">Location disabled</string>
    <string name="location_disabled_message">Do you want to enable location services?</string>
    <string name="average_speed_3_5_km_h">Average speed: 3.5 km/h</string>
    <string name="center_map">center map</string>
    <string name="distance_3_km">Distance: 3 km</string>
    <string name="speed_2_km_h">Speed: 2 km/h</string>
    <string name="start_stop_button">start/stop button</string>
    <string name="time_00_00_00">Time: 00:00:00</string>
</resources>